add_library(ible STATIC)
target_sources(ible PRIVATE
        src/ble.cpp src/specification.cpp src/visitors.cpp src/builders.cpp src/gatt_if.cpp)
target_include_directories(ible PUBLIC include)
target_compile_features(ible PUBLIC cxx_std_17)
target_compile_options(ible PUBLIC "$<$<NOT:$<CXX_COMPILER_ID:AppleClang>>:-mlongcalls>")
target_compile_options(ible PUBLIC "$<$<CXX_COMPILER_ID:AppleClang>:-mlong-calls>")
target_compile_options(ible PUBLIC "$<$<CONFIG:DEBUG>:-g3>")
target_compile_options(ible PUBLIC "$<$<CONFIG:RELEASE>:-O2>")
target_link_libraries(ible PUBLIC vif)
target_link_libraries(ible PUBLIC idf::esp_timer idf::log idf::driver idf::bt)
target_link_libraries(ible PUBLIC kbd::esp_if)
add_library(kbd::ible ALIAS ible)